make search in nav an a element to inherit behavior + styles, fix positioning of search on mobile and desktop

--- a/web/assets/scss/components/_nav.scss
+++ b/web/assets/scss/components/_nav.scss
@@ -134,7 +134,7 @@
       &.search-open {
         position: absolute;
         right: 0;
-        bottom: 4px;
+        bottom: 0;
         padding: 0;
       }
     }
