--- a/web/assets/scss/components/_search.scss
+++ b/web/assets/scss/components/_search.scss
@@ -70,11 +70,6 @@
 
 .search-open {
   @include font-buttons;
-  cursor: pointer;
-  &:hover {
-    text-decoration: underline;
-  }
-  padding: 4px 2*$beat 4px 4px;
 
   .icon-search {
     top: 2px;
@@ -91,6 +86,9 @@
       width: 13px;
       height: 13px;
     }
+  }
+  @include media-md {
+    margin-right: 12px;
   }
 }
 
